# atlas

./: .env.example  .gitignore  CHANGELOG.md  INSTALLATION.md  LICENSE  README.md  RELEASE_HISTORY.md  pyproject.toml  requirements.txt
docs/00_Project/: AI_Coding_Standards.md  AI_Context.md  ATLAS_MASTER_CONTEXT.md  Development_Workflow.md  Lessons_Learned.md  Project_Initiation_Document.md
docs/01_Architecture/: Atlas_Architecture.md  Atlas_Multi_Instrument_Identity_and_Grain_Design.md  Atlas_Near_Real_Time_Market_Data.md  Gold_Contract.md  Massive_Futures_Bronze_Contract.md  Massive_Futures_Gold_Contract.md  Massive_Futures_Silver_Contract.md  Silver_Contract.md  Solution_Architecture.md
docs/02_Product/: MVP_Design.md  Reporting_Foundation.md
docs/04_API/: Fabric_Bronze_Ingestion.md
research/: README.md
scripts/: analyse_cqg_streaming_profile.py  analyse_legacy_tick_sample.py  discover_massive_futures_contracts.py  discover_massive_futures_flat_files.py  extract_legacy_tick_sample.py  inspect_massive_futures_contract_metadata.py  inspect_massive_futures_minute_duplicates.py  inspect_massive_futures_minute_flat_file.py  profile_legacy_tick_file.py  profile_massive_futures_minute_candidates.py  run_cqg_provider.py  run_massive_futures_stream_adapter.py  run_massive_provider.py  send_test_atlas_event_to_fabric.py  smoke_test_massive_provider.py  test_massive_futures_aggregates.py  test_massive_futures_minute_aggregate_transformer.py  test_massive_futures_websocket.py  validate_cqg_bronze.py
tests/: test_market_bar.py  test_massive_provider.py
(+112 files in other folders)
